tests/specs/serve/type_check/main.out
Check [WILDCARD]
error: TS2353 [ERROR]: Object literal may only specify known properties, and 'bad' does not exist in type 'Serve'.
  bad() {
  ~~~
    at [WILDCARD]main.ts:2:3
